elements/rh-tag/rh-tag.css
a {
  color: inherit;
  text-decoration: underline;
}

#container {
  display: inline-flex;
  align-items: center;
  position: relative;
  padding:
    var(--rh-tag-padding-block-start, var(--rh-space-xs, 4px))
    var(--rh-tag-padding-inline-end, var(--rh-space-md, 8px))
    var(--rh-tag-padding-block-end, var(--rh-space-xs, 4px))
    var(--rh-tag-padding-inline-start, var(--rh-space-md, 8px));
  gap: var(--rh-space-xs);
  font-family: var(--rh-font-family-body-text, RedHatText, 'Red Hat Text', 'Noto Sans Arabic', 'Noto Sans Hebrew', 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans Malayalam', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans Thai', Helvetica, Arial, sans-serif);
  font-weight: var(--rh-font-weight-body-text-regular, 400);
  font-size: var(--rh-font-size-body-text-sm, 0.875rem);
  line-height: var(--rh-line-height-body-text, 1.5);
  background-color: var(--_fill-color, var(--rh-color-surface-lighter, #f2f2f2));
  border: 0;
  border-radius: var(--rh-border-radius-pill, 64px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 100%;
  color: var(--_text-color, var(--rh-color-text-primary));
  border-width: 0;

  --rh-icon-size: var(--rh-size-icon-01, 16px);
  --_icon-color: currentcolor;

  &:before {
    position: absolute;
    inset: 0;
    pointer-events: none;
    content: '';
    border-radius: var(--rh-border-radius-pill, 64px);
    border:
      var(--rh-border-width-sm, 1px)
      solid
      var(--_border-color, var(--rh-color-border-subtle));

    &:hover {
      border-width: var(--rh-border-width-md, 2px);
    }
  }

  &.compact {
    font-size: var(--rh-font-size-body-text-xs, 0.75rem);
    padding:
      var(--rh-tag-padding-block-start, 0)
      var(--rh-tag-padding-inline-end, var(--rh-space-md, 8px))
      var(--rh-tag-padding-block-end, 0)
      var(--rh-tag-padding-inline-start, var(--rh-space-md, 8px));
  }

  &.red {
    --_fill-color: var(--rh-color-red-10, #fce3e3);
    --_border-color: var(--rh-color-red-60, #a60000);
    --_icon-color: var(--rh-color-red-60, #a60000);
    --_text-color: var(--rh-color-red-70, #5f0000);

    &.outline {
      --_text-color: var(--rh-color-red-60, #a60000);
    }

    &.on.dark {
      --_fill-color: var(--rh-color-red-70, #5f0000);
      --_border-color: var(--rh-color-red-50, #ee0000);
      --_icon-color: var(--rh-color-red-30, #f9a8a8);
      --_text-color: var(--rh-color-red-10, #fce3e3);

      &.outline {
        --_icon-color: var(--rh-color-red-20, #fbc5c5);
        --_text-color: var(--rh-color-red-30, #f9a8a8);
      }
    }
  }

  &.red-orange {
    --_fill-color: var(--rh-color-red-orange-10, #ffe3d9);
    --_border-color: var(--rh-color-red-orange-60, #b1380b);
    --_icon-color: var(--rh-color-red-orange-60, #b1380b);
    --_text-color: var(--rh-color-red-orange-70, #731f00);

    &.outline {
      --_text-color: var(--rh-color-red-orange-60, #b1380b);
    }

    &.on.dark {
      --_fill-color: var(--rh-color-red-orange-70, #731f00);
      --_border-color: var(--rh-color-red-orange-50, #f0561d);
      --_icon-color: var(--rh-color-red-orange-30, #f89b78);
      --_text-color: var(--rh-color-red-orange-10, #ffe3d9);

      &.outline {
        --_icon-color: var(--rh-color-red-orange-20, #fbbea8);
        --_text-color: var(--rh-color-red-orange-30, #f89b78);
      }
    }
  }

  &.orange {
    --_fill-color: var(--rh-color-orange-10, #ffe8cc);
    --_border-color: var(--rh-color-orange-60, #9e4a06);
    --_icon-color: var(--rh-color-orange-60, #9e4a06);
    --_text-color: var(--rh-color-orange-70, #732e00);

    &.outline {
      --_text-color: var(--rh-color-orange-60, #9e4a06);
    }

    &.on.dark {
      --_fill-color: var(--rh-color-orange-70, #732e00);
      --_border-color: var(--rh-color-orange-50, #ca6c0f);
      --_icon-color: var(--rh-color-orange-30, #f8ae54);
      --_text-color: var(--rh-color-orange-10, #ffe8cc);

      &.outline {
        --_icon-color: var(--rh-color-orange-20, #fccb8f);
        --_text-color: var(--rh-color-orange-30, #f8ae54);
      }
    }
  }

  &.yellow {
    --_fill-color: var(--rh-color-yellow-10, #fff4cc);
    --_border-color: var(--rh-color-yellow-60, #96640f);
    --_icon-color: var(--rh-color-yellow-60, #96640f);
    --_text-color: var(--rh-color-yellow-70, #73480b);

    &.outline {
      --_text-color: var(--rh-color-yellow-60, #96640f);
    }

    &.on.dark {
      --_fill-color: var(--rh-color-yellow-70, #73480b);
      --_border-color: var(--rh-color-yellow-50, #b98412);
      --_icon-color: var(--rh-color-yellow-30, #ffcc17);
      --_text-color: var(--rh-color-yellow-10, #fff4cc);

      &.outline {
        --_icon-color: var(--rh-color-yellow-20, #ffe072);
        --_text-color: var(--rh-color-yellow-30, #ffcc17);
      }
    }
  }

  &.green {
    --_fill-color: var(--rh-color-green-10, #e9f7df);
    --_border-color: var(--rh-color-green-60, #3d7317);
    --_icon-color: var(--rh-color-green-60, #3d7317);
    --_text-color: var(--rh-color-green-70, #204d00);

    &.outline {
      --_text-color: var(--rh-color-green-60, #3d7317);
    }

    &.on.dark {
      --_fill-color: var(--rh-color-green-70, #204d00);
      --_border-color: var(--rh-color-green-50, #63993d);
      --_icon-color: var(--rh-color-green-30, #afdc8f);
      --_text-color: var(--rh-color-green-10, #e9f7df);

      &.outline {
        --_icon-color: var(--rh-color-green-20, #d1f1bb);
        --_text-color: var(--rh-color-green-30, #afdc8f);
      }
    }
  }

  &.teal {
    --_fill-color: var(--rh-color-teal-10, #daf2f2);
    --_border-color: var(--rh-color-teal-60, #147878);
    --_icon-color: var(--rh-color-teal-60, #147878);
    --_text-color: var(--rh-color-teal-70, #004d4d);

    &.outline {
      --_text-color: var(--rh-color-teal-60, #147878);
    }

    &.on.dark {
      --_fill-color: var(--rh-color-teal-70, #004d4d);
      --_border-color: var(--rh-color-teal-50, #37a3a3);
      --_icon-color: var(--rh-color-teal-30, #9ad8d8);
      --_text-color: var(--rh-color-teal-10, #daf2f2);

      &.outline {
        --_icon-color: var(--rh-color-teal-20, #b9e5e5);
        --_text-color: var(--rh-color-teal-30, #9ad8d8);
      }
    }
  }

  &.blue {
    --_fill-color: var(--rh-color-blue-10, #e0f0ff);
    --_border-color: var(--rh-color-blue-60, #004d99);
    --_icon-color: var(--rh-color-blue-60, #004d99);
    --_text-color: var(--rh-color-blue-70, #003366);

    &.outline {
      --_text-color: var(--rh-color-blue-60, #004d99);
    }

    &.on.dark {
      --_fill-color: var(--rh-color-blue-70, #003366);
      --_border-color: var(--rh-color-blue-50, #0066cc);
      --_icon-color: var(--rh-color-blue-30, #92c5f9);
      --_text-color: var(--rh-color-blue-10, #e0f0ff);

      &.outline {
        --_icon-color: var(--rh-color-blue-20, #b9dafc);
        --_text-color: var(--rh-color-blue-30, #92c5f9);
      }
    }
  }

  &.purple {
    --_fill-color: var(--rh-color-purple-10, #ece6ff);
    --_border-color: var(--rh-color-purple-60, #3d2785);
    --_icon-color: var(--rh-color-purple-60, #3d2785);
    --_text-color: var(--rh-color-purple-70, #21134d);

    &.outline {
      --_text-color: var(--rh-color-purple-60, #3d2785);
    }

    &.on.dark {
      --_fill-color: var(--rh-color-purple-70, #21134d);
      --_border-color: var(--rh-color-purple-50, #5e40be);
      --_icon-color: var(--rh-color-purple-30, #b6a6e9);
      --_text-color: var(--rh-color-purple-10, #ece6ff);

      &.outline {
        --_icon-color: var(--rh-color-purple-20, #d0c5f4);
        --_text-color: var(--rh-color-purple-30, #b6a6e9);
      }
    }
  }

  &.gray {
    --_fill-color: var(--rh-color-gray-10, #f2f2f2);
    --_border-color: var(--rh-color-gray-60, #4d4d4d);
    --_icon-color: var(--rh-color-gray-60, #4d4d4d);
    --_text-color: var(--rh-color-gray-70, #383838);

    &.outline {
      --_text-color: var(--rh-color-gray-60, #4d4d4d);
    }

    &.on.dark {
      --_fill-color: var(--rh-color-gray-70, #383838);
      --_border-color: var(--rh-color-gray-50, #707070);
      --_icon-color: var(--rh-color-gray-30, #c7c7c7);
      --_text-color: var(--rh-color-gray-10, #f2f2f2);

      &.outline {
        --_icon-color: var(--rh-color-gray-20, #e0e0e0);
        --_text-color: var(--rh-color-gray-30, #c7c7c7);
      }
    }
  }

  &.outline {
    --_fill-color: var(--rh-color-white, #ffffff);
    --_border-color: var(--rh-color-gray-30, #c7c7c7);

    &.on.dark {
      --_fill-color: var(--rh-color-gray-95, #151515);
      --_border-color: var(--rh-color-gray-50, #707070);
    }
  }

  &.desaturated,
  &.on.light.desaturated,
  &.on.dark.desaturated {
    --_fill-color: transparent;
    --_border-color: var(--rh-color-text-primary);
    --_icon-color: var(--rh-color-text-primary);
    --_text-color: var(--rh-color-text-primary);
  }
}

[part='icon'] {
  display: none;
  pointer-events: none;
  font-size: 0.875rem;
  color: var(--_icon-color);
  margin-inline-end: var(--rh-tag-margin-inline-end, var(--rh-space-xs, 4px));

  --rh-icon-size: 1em;
}

.hasIcon [part='icon'] {
  display: inline-flex;
  align-items: center;
}

::slotted(svg) {
  height: 1em;
  aspect-ratio: 1;
}
}

